--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/section03_data
+spring.datasource.url=jdbc:mysql://localhost:3306/data_project_mini
 spring.datasource.username=root
 spring.datasource.password=Tronghung2841
 spring.jpa.hibernate.ddl-auto=update
